--- a/bumperboys.html
+++ b/bumperboys.html
@@ -36,6 +36,7 @@
 			<p class="paragraph">We're a couple guys with weird hats that make bumpers.</p>
 		</div>
 		<div class="footer">
+			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
 		</div>
 	</div>
    </body>
