--- a/scouting.html
+++ b/scouting.html
@@ -29,6 +29,7 @@
 			<p><a href="https://beterscomputerrepair.wordpress.com" target="_blank">Beter's Better Computer Repair</a></p>
 		</div>
 		<div class="footer">
+			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
 		</div>
 	</div>
    </body>
