--- a/computers.html
+++ b/computers.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
   <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
@@ -27,6 +28,11 @@
 			<p><a href="resources.html">Resources and Documents</a></p>
 			<p><a href="http://www.beastbot2855.com" target="_blank">BEASTBot Home</a></p>
 			<p><a href="https://beterscomputerrepair.wordpress.com" target="_blank">Beter's Better Computer Repair</a></p>
+		</div>
+		<div class="pagecontent">
+			<center>
+				<img src="images/under-construction.jpg" width="700" alt="under construction" />
+			</center>
 		</div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
