--- a/resources.html
+++ b/resources.html
@@ -28,6 +28,11 @@
 			<p><a href="http://www.beastbot2855.com" target="_blank">BEASTBot Home</a></p>
 			<p><a href="https://beterscomputerrepair.wordpress.com" target="_blank">Beter's Better Computer Repair</a></p>
 		</div>
+                <div class="pagecontent">
+                        <center>
+                                <img src="images/under-construction.jpg" width="700" alt="under construction" />
+                        </center>
+                </div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
 		</div>
