--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="pagecontent">
 			<h1>Welcome to Bumper Boys with a Z!</h1>
 			<h2>A resource page for Team 2855</h2>
-			<p class="paragraph">You have found yourself in an experiment in the making, the great resource center for team 2855 BEASTbot, by the Bumper Boys with a Z. Here you can find past and present game manuals, computer software, bumper building guides, and much more. You can also find our new experimental scouting page, a system which we hope to develop into a real time scouting system we can use at tournaments that everyone can access. This page will be receiving updates in the coming months, and I hope that all BEASTBot members will be able to benefit from this project!</br>-The Bumper Boys with a Z.</p>
+			<p class="paragraph">You have found yourself in an experiment in the making, the great resource center for team 2855 BEASTbot, by the Bumper Boys with a Z. Here you can find past and present game manuals, computer software, bumper building guides, and much more. You can also find our new experimental scouting page, a system which we hope to develop into a real time scouting system we can use at tournaments that everyone can access. This page will be receiving updates in the coming months, and I hope that all BEASTBot members will be able to benefit from this project! Keep in mind that this is a work in progress, so some things will look incomplete.</br>-The Bumper Boys with a Z.</p>
 			<center>
 				<img src="images/teamphoto.JPG" alt="team photo" />
 			</center>
