--- a/bumperboys.html
+++ b/bumperboys.html
@@ -4,7 +4,7 @@
 
     <head>
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <title>Bumper Boys with a Z</title>
+      <title>About the Bumper Boys with a Z</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
 
@@ -33,7 +33,7 @@
 			<center>
 				<img src="images/hattie.jpg" width="700" alt="Bumper Boys Outfit" />
 			</center>
-			<p class="paragraph">We're a couple guys with weird hats that make bumpers.</p>
+			<p class="paragraph">We're Ben and Peter, a couple guys with weird hats that make bumpers. We have been on the team since the 2016 Stronghold season. We are expanding our skills into the computer field, and are striving to be a part of the programming team beginning with the 2018 season. Our background includes HTML coding (we made this site!) and Apple computer repair. An amazing combo, we know. You can check out our own business website at <a href="https://beterscomputerrepair.wordpress.com" target="_blank">Beter's Better Computer Repair</a>.</p>
 		</div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
