--- a/computers.html
+++ b/computers.html
@@ -5,7 +5,7 @@
 
     <head>
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <title>Bumper Boys with a Z</title>
+      <title>Computers Home</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
 
@@ -30,9 +30,26 @@
 			<p><a href="https://beterscomputerrepair.wordpress.com" target="_blank">Beter's Better Computer Repair</a></p>
 		</div>
 		<div class="pagecontent">
-			<center>
-				<img src="images/under-construction.jpg" width="700" alt="under construction" />
-			</center>
+			<h1>Computer Resources</h1>
+				<p class="paragraph">This is a place for links to software, everything that you should need to get your computer up and running the software needed to do the robot good, as well as information about the current team computers. In the future we hope to be able to host some of the files locally so that reinstallation can happen at tournaments without internet connection. For now, it is just a bunch of links to installation and download instructions.</p>
+			<h2>Computer information</h2>
+				<p class="paragraphminor">Information on team and team member computers that have been found to be able to run driver station. Potentially useful if you would like to see if your computer can run it. (It probably can, unless you want to run vision tracking. Driving the robot doesn't take much power.)</p>
+				<ul>
+					<li>Lenovo ThinkPad P70</li>
+					<li>Toshiba Satellite</li>
+					<li>Alienware</li>
+					<li>MacBook Pro</li>
+					<li>Asus</li>
+				</ul>
+			<h2>2017 First Steamworks</h2>
+			<h3>Links to FRC Screensteps</h3>
+				<ul>
+					<li><a href="http://wpilib.screenstepslive.com" target="_blank">WPI Screensteps Home</a></li>
+					<li><a href="http://wpilib.screenstepslive.com/s/4485" target="_blank">2017 Software Home</a></li>
+					<li><a href="http://wpilib.screenstepslive.com/s/4485/m/13810/l/599669-installing-the-frc-2017-update-suite-all-languages" target="_blank">Driver Station</a></li>
+					<li><a href="http://wpilib.screenstepslive.com/s/4485/m/13809/l/599681-installing-eclipse-c-java" target="_blank">Eclipse (Choose Java)</a></li>
+				</ul>
+			<h3>Links to other software</h3>		
 		</div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
