--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
 
     <head>
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <title>Bumper Boys with a Z</title>
+      <title>Resources and Documents</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
 
@@ -29,9 +29,11 @@
 			<p><a href="https://beterscomputerrepair.wordpress.com" target="_blank">Beter's Better Computer Repair</a></p>
 		</div>
                 <div class="pagecontent">
-                        <center>
-                                <img src="images/under-construction.jpg" width="700" alt="under construction" />
-                        </center>
+                        <h1>2017 First Steamworks</h1>
+			<h2>Guides and Documents</h2>
+				<ul>
+					<li><a href="files/2017FRCGameSeasonManual.pdf">2017 FRC Game Season Manual</a></li>
+				</ul>
                 </div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
