--- a/scouting.html
+++ b/scouting.html
@@ -4,7 +4,7 @@
 
     <head>
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <title>Bumper Boys with a Z</title>
+      <title>Scouting Home</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
 
