--- a/computers.html
+++ b/computers.html
@@ -39,7 +39,7 @@
 					<li>Toshiba Satellite</li>
 					<li>Alienware</li>
 					<li>MacBook Pro</li>
-					<li>Asus</li>
+					<li>Asus K53E</li>
 				</ul>
 			<h2>2017 First Steamworks</h2>
 			<h3>Links to FRC Screensteps</h3>
