Added robot pages
Added robot pages and updated computer page, also added MacBook Pro page

--- a/computers.html
+++ b/computers.html
@@ -38,10 +38,15 @@
 					<li>Lenovo ThinkPad P70</li>
 					<li>Toshiba Satellite</li>
 					<li>Alienware</li>
-					<li>MacBook Pro</li>
-					<li>Asus</li>
+					<li><a href="macbookpro.html">MacBook Pro</a></li>
+					<li>Asus K53E</li>
 				</ul>
-			<h2>2017 First Steamworks</h2>
+			<h2>Programming Guides</h2>
+				<ul>
+					<li><a href="http://www.dummies.com/store/product/Java-For-Dummies-7th-Edition.productCd-1119235553.html" target="_blank">Java for Dummies 7th Edition</a></li>
+					<li><a href="http://wpilib.screenstepslive.com/s/4485/m/13809" target="blank">FRC Screensteps Java Programming Home</a></li>
+				</ul>
+			<h2>2017 First Steamworks (Software)</h2>
 			<h3>Links to FRC Screensteps</h3>
 				<ul>
 					<li><a href="http://wpilib.screenstepslive.com" target="_blank">WPI Screensteps Home</a></li>
