--- a/heartofbeast.html
+++ b/heartofbeast.html
@@ -4,7 +4,7 @@
 
     <head>
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-      <title>Robot Information</title>
+      <title>Heart of the Beast</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
 
@@ -29,18 +29,12 @@
 			<p><a href="https://beterscomputerrepair.wordpress.com" target="_blank">Beter's Better Computer Repair</a></p>
 		</div>
 		<div class="pagecontent">
-			<h1>Robot Information</h1>
-				<p class="paragraph">This the Robot homepage. Here, you can find information about each robot's functionality and controls.</p>
-			<h2>2016 Sparky</h2>
-				<center>
-					<p>Sparky image goes here</p>
-					<p>Click <a href="sparky.html">HERE</a> to go to Sparky's page.</p>
-				</center>
-			<h2>2017 Heart of the Beast</h2>
-				<center>
-					<p>Heart of the Beast image goes here</p>
-					<p>Click <a href="heartofbeast.html">HERE</a> to go to the Heart of the Beast's page.</p>
-				</center>	
+			<h1>Heart of the Beast</h1>
+			<h2>About the Heart of the Beast</h2>
+				<center><p>image goes here, and some text stuff</p></center>
+			<h2>Functions</h2>
+			<h2>Features</h2>
+			<h2>Controls</h2>
 		</div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
