Created backstory for Example 1

--- a/robot.html
+++ b/robot.html
@@ -40,7 +40,12 @@
 				<center>
 					<p>Heart of the Beast image goes here</p>
 					<p>Click <a href="heartofbeast.html">HERE</a> to go to the Heart of the Beast's page.</p>
-				</center>	
+				</center>
+			<h2>2018 Example 1</h2>
+				<center>
+					<p>Example 1 image goes here</p>
+					<p>Backstory: When the bumperboys were born, the first words that came out of their mouths was simultaneously saying, "The 2018 robot shall be named Example 1". Everyone was confused that day, but now they know what it means. We named the robot before some of y'all were born, so we've got dibs.</p>
+				</center>
 		</div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
