--- a/computers.html
+++ b/computers.html
@@ -54,7 +54,10 @@
 					<li><a href="http://wpilib.screenstepslive.com/s/4485/m/13810/l/599669-installing-the-frc-2017-update-suite-all-languages" target="_blank">Driver Station</a></li>
 					<li><a href="http://wpilib.screenstepslive.com/s/4485/m/13809/l/599681-installing-eclipse-c-java" target="_blank">Eclipse (Choose Java)</a></li>
 				</ul>
-			<h3>Links to other software</h3>		
+			<h3>Links to other software</h3>
+				<ul>
+					<li><a href="http://www.ctr-electronics.com/control-system/motor-control/talon-srx.html#product_tabs_technical_resources" target="_blank">CTRE Talon SRX Software</a></li>
+				</ul>		
 		</div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
