Added info to scouting page
Added tournament update info and set the basic layout of the scouting
page

--- a/scouting.html
+++ b/scouting.html
@@ -29,9 +29,12 @@
 			<p><a href="https://beterscomputerrepair.wordpress.com" target="_blank">Beter's Better Computer Repair</a></p>
 		</div>
 		<div class="pagecontent">
-			<center>
-				<img src="images/under-construction.jpg" width="700" alt="under construction" />
-			</center>
+			<h1>Welcome to Scouting</h1>
+			<p class="paragraph">Here, you can find all scouting data for tournaments completed since the 2017 MRI tournament. During tournaments, this site will be updated nightly. Keep in mind that the website that you access at tournaments is a different site than this one, although they look identical. To access scouting data during a tournament, go to the scouting website (There will be a link to that site at tournaments). </p>
+			<h2>Scouting Site</h2>
+			<p class="paragraphminor">This is only available during tournaments on the tournament version of the site.</p>
+			<h2>Scouting Data</h2>
+			<p style="text-align: center; font-weight: bold;">MRI 2017</p>
 		</div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
