--- a/scouting.html
+++ b/scouting.html
@@ -30,6 +30,7 @@
 		</div>
 		<div class="pagecontent">
 			<h1>Welcome to Scouting</h1>
+			<h2>You are on the live site!</h2>
 			<p class="paragraph">Here, you can find all scouting data for tournaments completed since the 2017 MRI tournament. During tournaments, this site will be updated nightly. Keep in mind that the website that you access at tournaments is a different site than this one, although they look identical. To access scouting data during a tournament, go to the scouting website (There will be a link to that site at tournaments). </p>
 			<h2>Scouting Site</h2>
 			<p class="paragraphminor">This is only available during tournaments on the tournament version of the site.</p>
