--- a/scouting.html
+++ b/scouting.html
@@ -32,10 +32,10 @@
 			<h1>Welcome to Scouting</h1>
 			<h2>You are on the live site!</h2>
 			<p class="paragraph">Here, you can find all scouting data for tournaments completed since the 2017 MRI tournament. During tournaments, this site will be updated nightly. Keep in mind that the website that you access at tournaments is a different site than this one, although they look identical. To access scouting data during a tournament, go to the scouting website (There will be a link to that site at tournaments). </p>
-			<h2>Scouting Site</h2>
+			<h1>Scouting Site</h1>
 			<p class="paragraphminor">This is only available during tournaments on the tournament version of the site.</p>
-			<h2>Scouting Data</h2>
-			<p style="text-align: center; font-weight: bold;">MRI 2017</p>
+			<h1>Scouting Data</h1>
+			<h2>MRI 2017</h2>
 		</div>
 		<div class="footer">
 			<p>Created by the Bumper Boys with a Z<br />Pasteright 2017</p>
